[GUI] Only one element. No need for list.